--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
       "cmake.sourceDirectory": "${workspaceFolder}/source/demo1",
       "files.associations": {
-            "iostream": "cpp"
+            "iostream": "cpp",
+            "array": "cpp",
+            "deque": "cpp",
+            "string": "cpp",
+            "unordered_map": "cpp",
+            "vector": "cpp",
+            "string_view": "cpp",
+            "initializer_list": "cpp",
+            "random": "cpp"
       }
 }
