add demo1 and demo2 make.bat

--- a/source/demo1/CMakeLists.txt
+++ b/source/demo1/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(project_name demo1)
 cmake_minimum_required(VERSION 3.10)
-project(demo1)
-add_executable(demo1 main.cpp)
+project(${project_name})
+add_executable(${project_name} main.cpp)
